@@ -1,3 +1,8 @@
+2012-12-10  Jakub Jelinek  <jakub@redhat.com>
+
+	* g++.dg/asan/asan_test.cc: Sync from upstream.
+	* g++.dg/asan/asan_test_utils.h: Likewise.
+
 2012-12-04  Jakub Jelinek  <jakub@redhat.com>
 
 	PR testsuite/55587
